--- a/demo.html
+++ b/demo.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trang cá nhân</title>
+    <meta name="description" content="Trang cá nhân của Thanh"/>
+    <meta name="keywords" content="weg, di động"/>
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:description" content="Thanh dep trai"/>
 </head>
 <body>
     <h1>
